--- a/webgen/index2.html
+++ b/webgen/index2.html
@@ -9,8 +9,9 @@
         <body>
                 <div>
                         <div class="central">
-                                ...we're working on.          
+                                ...for a tool that...          
                         </div>
                 </div>
         </body>
 </html>
+<script src="https://code.jquery.com/jquery.js"></script><script>$(".central" ).on("click", function() { window.location = "index3.html"});</script>
