--- a/webgen/index3.html
+++ b/webgen/index3.html
@@ -9,11 +9,9 @@
         <body>
                 <div>
                         <div class="central">
-                                
-                                This is a test site...
-                                          
+                                ...we're working on.          
                         </div>
                 </div>
         </body>
 </html>
-<script src="https://code.jquery.com/jquery.js"></script><script>$(".central" ).on("click", function() { window.location = "index2.html"});</script>
+<script src="https://code.jquery.com/jquery.js"></script><script>$(".central" ).on("click", function() { window.location = "index1.html"});</script>
