works minimally, need better error handling and messages, better comments, more testing on nested cases

--- a/webgen/index_template.html
+++ b/webgen/index_template.html
@@ -11,7 +11,12 @@
                         <div class="central">
                                 {% block central %}
                                 This is a test site...
-                                {% endblock %}          
+                                {% block ignore %}
+                                {% endblock %}
+                                {% endblock %}     
+                                {% block ignore %}
+
+                                {% endblock %}      
                         </div>
                 </div>
         </body>
