error handling / messages, about to add tests

--- a/webgen/index_template.html
+++ b/webgen/index_template.html
@@ -12,11 +12,14 @@
                                 {% block central %}
                                 This is a test site...
                                 {% block ignore %}
+                                leave me alone
                                 {% endblock %}
                                 {% endblock %}     
                                 {% block ignore %}
 
                                 {% endblock %}      
+                                {% block central2%}
+                                {% endblock %}
                         </div>
                 </div>
         </body>
